# ha-ute-tariffs

./: .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  hacs.json  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-setup-steps.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  dependency-review.yml  gitleaks.yml  ha-holidays-check.yml  hacs-validate.yml  prerelease.yml  publish.yml  release.yml  ruff.yml  spell-check.yml  tests.yml  type-check.yml
custom_components/ute_tarifas/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  prices.py  sensor.py  strings.json  tariff.py
custom_components/ute_tarifas/translations/: en.json  es.json
docs/documentation/: 01-user-manual.md  02-installation-and-setup.md  03-how-it-works.md  04-development-guide.md  05-troubleshooting-and-debugging.md
scripts/: bump_version.py
tests/: test_tariff.py
